remove proguard, add one-jar